# RecklessDrivinPort

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  dev-readme.md  nohup.out  string_fix_plan.md
.github/workflows/: build.yml
angular-site/: .gitignore  EDITOR_CHECKLIST.md  README.md  TILE_ROAD_GROUPING.md  angular.json  eslint-neverthrow-must-use-result.cjs  eslint-neverthrow-patched.mjs  eslint.config.mjs  konva-architecture.md  package-lock.json  package.json  playwright.config.ts  tsconfig.spec.json
angular-site/e2e/: game-runtime-restart.spec.ts  level-editor.spec.ts  test-screens.spec.ts  test-strings-tab.spec.ts
angular-site/playwright-report/: index.html
angular-site/public/: robots.txt  sitemap.xml
angular-site/src/: index.html  styles.css  styles.scss
angular-site/src/app/: app-audio.ts  app-barrier-draw.ts  app-helpers.ts  app-history.ts  app-idb.ts  app-level.ts  app-loaders.ts  app-mark-canvas.ts  app-mark-editor.ts  app-media-actions.ts  app-media-audio.ts  app-media.spec.ts  app-media.ts  app-module.ts  app-pack-editing.ts  app-platform.ts  app-road-editing.ts  app-runtime-actions.ts  app-runtime-konva-events.ts  app-runtime-track.ts  app-runtime.ts  app-session.ts  app-state-base.ts  app-state-resources.ts  app.html  app.scss  app.spec.ts  app.ts  bind-app-action.ts  canvas-data-url.ts  editor-canvas-overlays.ts  editor-canvas.component.html  editor-canvas.component.scss  editor-canvas.component.ts  image-resource-codec.ts  konva-editor.background.ts  konva-editor.barriers.ts  konva-editor.marks.ts  konva-editor.objects.ts  konva-editor.profiler.ts  (+62 more)
angular-site/src/app/editor/: editor-canvas.component.html  editor-canvas.component.scss  editor-canvas.component.ts  marks-editor.component.html  marks-editor.component.ts  object-inspector.component.html  object-inspector.component.scss  object-inspector.component.ts  object-list.component.html  object-list.component.scss  object-list.component.ts  properties-tab.component.html  properties-tab.component.scss  properties-tab.component.ts  sprite-editor.component.html  sprite-editor.component.scss  sprite-editor.component.ts
angular-site/src/app/editor/canvas-toolbar/: canvas-info-popup.component.html  canvas-info-popup.component.scss  canvas-info-popup.component.ts  marking-popup.component.html  marking-popup.component.scss  marking-popup.component.ts
angular-site/src/app/editor/image-preview/: image-preview.component.css  image-preview.component.html  image-preview.component.ts
angular-site/src/app/editor/sections/audio/: editor-audio-section.component.html  editor-audio-section.component.scss  editor-audio-section.component.ts
angular-site/src/app/editor/sections/object-groups/: editor-object-groups-section.component.html  editor-object-groups-section.component.scss  editor-object-groups-section.component.ts
angular-site/src/app/editor/sections/object-types/: editor-object-types-constants.ts  editor-object-types-section.component.html  editor-object-types-section.component.scss  editor-object-types-section.component.spec.ts  editor-object-types-section.component.ts  editor-object-types-section.helpers.spec.ts  editor-object-types-section.helpers.ts
angular-site/src/app/editor/sections/objects/: editor-objects-section.component.html  editor-objects-section.component.ts
angular-site/src/app/editor/sections/properties/: editor-properties-section.component.html  editor-properties-section.component.ts
angular-site/src/app/editor/sections/screens/: editor-screens-section.component.html  editor-screens-section.component.scss  editor-screens-section.component.ts
angular-site/src/app/editor/toolbar/: editor-toolbar.component.html  editor-toolbar.component.ts
angular-site/src/app/game/: game-customisation-presets.ts
angular-site/src/app/game/game-panel/: game-panel.component.html  game-panel.component.ts
angular-site/src/app/layout/site-toolbar/: site-toolbar.component.html  site-toolbar.component.spec.ts  site-toolbar.component.ts
angular-site/src/app/shared/: input-value.directive.ts
build_wasm_local/: reckless_drivin.js  reckless_drivin.wasm
debug/parsed/: icl8_128.raw  icl8_129.raw
docs/: index.html  reckless_drivin.html  reckless_drivin.js  reckless_drivin.wasm
docs/engine/: engine-overview.md  level-data.md
documentation/: editor-test-launch-findings.md  level-editor-data-structures.md
extracted-assets/: README.json  README.md  level-1-objects.csv  level-1-road-segments.csv  level-2-objects.csv  level-2-road-segments.csv  level-3-objects.csv  level-3-road-segments.csv  levels.json  object-types.json
gh-pages-local/: chunk-B5J7H6LR.js  chunk-Y4LVWFZJ.js  index.html  main-J6BEKJRO.js  styles-DTTL53TB.css
headers/: InternetConfig.h  error.h  gameinitexit.h  objects.h  packs.h  preferences.h  screen.h  vec2d.h
level-format/: README.md
port/: mac_compat.h  mac_stubs.c
port/android/: settings.gradle
port/android/app/: build.gradle
port/android/app/src/main/: AndroidManifest.xml
port/angular-site/: README.md  angular.json  package-lock.json  package.json
port/angular-site/src/: index.html  styles.scss
port/angular-site/src/app/: app.html  app.scss  app.spec.ts  app.ts  level-editor.service.spec.ts  level-editor.service.ts  resource-dat.service.ts
port/lzrw/: lzrw.h  lzrwHandleInterface.c  lzrwHandleInterface.h
port/mac_headers/: Appearance.h  DrawSprocket.h  DriverServices.h  HID_Utilities_CFM.h  InputSprocket.h  QDOffscreen.h  Sound.h  iShockXForceAPI.h  sound.h  timer.h
port/platform/: sdl_platform.c
port/resources/: resources.c
port/wasm/: shell.html
scripts/: build-wasm-local.sh  check-file-lengths.sh  check-file-metrics.sh  list-file-lengths.sh  sync-angular-dev-assets.mjs
source/: HIDAccess.c  appleevents.c  byteswap_packs.c  byteswap_packs.h  error.c  gameendseq.c  gameframe.c  gameinitexit.c  high.c  initexit.c  input.c  interface.c  objectCollision.c  objectControl.c  objectPhysics.c  objects.c  packs.c  preferences.c  register.c  renderframe.c  renderframezoom.c  rle.c  roaddraw.c  screen.c  screenfx.c  sound.c  sprites.c  textfx.c
(+10 files in other folders)
